<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_explore_dolby_sidemenu" android:id="@id/nav_exploredolby" android:title="@string/explore_dolby" />
        <item android:checkable="false" android:icon="@drawable/ic_appearance_sidemenu" android:id="@+id/nav_appearance" android:title="@string/appearance" />
        <item android:checkable="false" android:icon="@drawable/ic_launcher_sidemenu" android:id="@+id/nav_launcher_icon" android:title="@string/hide_launcher_icon" app:actionLayout="@layout/nav_action_switch" app:showAsAction="always" />
        <item android:checkable="false" android:icon="@drawable/ic_reset_sidemenu" android:id="@id/nav_reset" android:title="@string/reset" />
    </group>
</menu>
