<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="13.0sp" android:textColor="@color/colorText" android:id="@id/profileDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_spacing" android:text="@string/dolby_dynamic_profile" android:lineSpacingExtra="3.0dip" android:textDirection="anyRtl" android:background="@drawable/card_feature_box" android:paddingStart="14.0dip" android:paddingEnd="14.0dip" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" />
    <RelativeLayout android:id="@id/ieqLayout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_spacing">
        <LinearLayout android:id="@+id/ieqTextHeaderLayout" android:orientation="horizontal" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/section_header_height" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
            <TextView android:textSize="@dimen/section_header_text_size" android:textColor="@color/colorText" android:id="@id/ieqText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ieq_text" android:includeFontPadding="false" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/section_header_text_size" android:textColor="@color/colorTextSelected" android:id="@id/ieqName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="4.0dip" android:includeFontPadding="false" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/equalizerView" android:baselineAligned="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_header_content_spacing" android:layout_below="@id/ieqTextHeaderLayout">
            <GridView android:id="@id/equalizerListView" android:focusable="true" android:scrollbars="none" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="3.0" android:listSelector="@android:color/transparent" android:horizontalSpacing="4.0dip" android:numColumns="3" android:stretchMode="columnWidth" android:choiceMode="singleChoice" android:soundEffectsEnabled="false" />
            <LinearLayout android:orientation="horizontal" android:id="@id/equalizerListOff" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:layout_marginStart="4.0dip">
                <LinearLayout android:gravity="center" android:id="@id/equalizerListOffLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:layout_gravity="center" android:id="@id/icon_off" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_none_off_ieq" android:scaleType="centerInside" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="@dimen/section_header_text_size" android:textColor="@color/colorText" android:id="@+id/profileSettingsTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/section_header_height" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_marginTop="@dimen/section_spacing" android:text="@string/profile_settings_title" android:includeFontPadding="false" />
    <LinearLayout android:orientation="vertical" android:id="@id/featureSwitches" android:background="@drawable/card_feature_box" android:paddingStart="14.0dip" android:paddingEnd="14.0dip" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_header_content_spacing">
        <RelativeLayout android:id="@id/vlView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="15sp" android:textColor="@color/colorText" android:id="@id/vlText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/volume_leveler" android:layout_alignParentStart="true" android:layout_toStartOf="@id/vlButton" android:layout_marginEnd="12dp" />
            <Switch android:thumbTint="@null" android:trackTint="@null" android:id="@id/vlButton" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:track="@drawable/switch_track" android:layout_alignParentEnd="true" android:layout_centerVertical="true" />
            <TextView android:textSize="13sp" android:textColor="@color/colorProfileDesText" android:id="@+id/vlSummary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/volume_leveler_summary" android:layout_below="@id/vlText" android:layout_toStartOf="@id/vlButton" android:layout_marginTop="2.0dip" android:layout_marginEnd="12.0dip" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/beView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="15sp" android:textColor="@color/colorText" android:id="@id/beText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bass_enhancer" android:layout_alignParentStart="true" android:layout_toStartOf="@id/beButton" android:layout_marginEnd="12dp" />
            <Switch android:thumbTint="@null" android:trackTint="@null" android:id="@id/beButton" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:track="@drawable/switch_track" android:layout_alignParentEnd="true" android:layout_centerVertical="true" />
            <TextView android:textSize="13sp" android:textColor="@color/colorProfileDesText" android:id="@+id/beSummary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bass_enhancer_summary" android:layout_below="@id/beText" android:layout_toStartOf="@id/beButton" android:layout_marginTop="2.0dip" android:layout_marginEnd="12.0dip" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/svView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="15sp" android:textColor="@color/colorText" android:id="@id/svText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/surround_virtualizer" android:layout_alignParentStart="true" android:layout_toStartOf="@id/svButton" android:layout_marginEnd="12dp" />
            <Switch android:thumbTint="@null" android:trackTint="@null" android:id="@id/svButton" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:track="@drawable/switch_track" android:layout_alignParentEnd="true" android:layout_centerVertical="true" />
            <TextView android:textSize="13sp" android:textColor="@color/colorProfileDesText" android:id="@+id/svSummary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/surround_virtualizer_summary" android:layout_below="@id/svText" android:layout_toStartOf="@id/svButton" android:layout_marginTop="2.0dip" android:layout_marginEnd="12.0dip" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/deView" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/deHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">
                <Switch android:thumbTint="@null" android:trackTint="@null"
                    android:id="@+id/deButtonSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:contentDescription="@string/dialogue_enhancer"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/deButtonSwitch"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/deText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/colorText"
                        android:text="@string/dialogue_enhancer" />
                    <TextView
                        android:id="@+id/deSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textSize="13sp"
                        android:textColor="@color/colorProfileDesText"
                        android:text="@string/dialogue_enhancer_summary" />
                </LinearLayout>
            </RelativeLayout>
            <SeekBar android:thumbTint="@null" android:progressTint="@null" android:progressBackgroundTint="@null" android:background="@null"
                android:id="@+id/deButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/deHeader"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:minHeight="5dp"
                android:maxHeight="5dp"
                android:max="16"
                android:progress="6"
                android:contentDescription="@string/dialogue_enhancer"
                android:progressDrawable="@drawable/de_seekbar_track"
                android:thumb="@drawable/de_seekbar_thumb"
                android:thumbOffset="10dp"
                android:splitTrack="false" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
